# OmniSpace

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
core/: package.json
core/src/: captureManager.ts  clipboardSync.ts  deviceIdentity.ts  edgeDetection.ts  focusManager.ts  handoffEngine.ts  index.ts  inputProtocol.ts  inputTranslation.ts  math.ts  mediaTransport.ts  qualityController.ts  rtc.ts  schema.ts  types.ts  windowTracking.ts
core/tests/: captureManager.test.ts  clipboardSync.test.ts  edgeDetection.test.ts  focusManager.test.ts  handoffEngine.test.ts  inputTranslation.test.ts  math.test.ts  mediaTransport.test.ts  qualityController.test.ts  rtc.test.ts
desktop/: index.html  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
desktop/src/: App.tsx  index.css  tauri-shims.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: CalibrationScreen.tsx  DesktopWindowRenderer.tsx  PermissionOnboarding.tsx  WindowCapturePrompt.tsx
desktop/src/hooks/: useClipboardWatcher.ts  useInputCapture.ts  useNativeWindowTracking.ts  useWindowHandoff.ts
mobile-pwa/: index.html  package.json  vite.config.ts
mobile-pwa/src/: App.tsx  index.css
signaling-server/: package.json
signaling-server/src/: index.ts
signaling-server/tests/: signaling.test.ts
ui/: package.json
ui/src/: CursorOverlay.tsx  MockOSWindow.tsx  RemoteWindowRenderer.tsx  index.ts
(+4 files in other folders)
